--- a/mx/stm32mp157a-hdmi-lt8912b-emmc-mx/tf-a/stm32mp157a-hdmi-lt8912b-emmc-mx.dts
+++ b/mx/stm32mp157a-hdmi-lt8912b-emmc-mx/tf-a/stm32mp157a-hdmi-lt8912b-emmc-mx.dts
@@ -110,17 +110,21 @@
 
 	sdmmc2_pins_mx: sdmmc2_mx-0 {
 		pins1 {
-			pinmux = <STM32_PINMUX('B', 3, AF9)>, /* SDMMC2_D2 */
-					 <STM32_PINMUX('B', 4, AF9)>, /* SDMMC2_D3 */
+			pinmux = <STM32_PINMUX('G', 6, AF10)>; /* SDMMC2_CMD */
 					 <STM32_PINMUX('B', 14, AF9)>, /* SDMMC2_D0 */
 					 <STM32_PINMUX('B', 15, AF9)>, /* SDMMC2_D1 */
-					 <STM32_PINMUX('G', 6, AF10)>; /* SDMMC2_CMD */
+					 <STM32_PINMUX('B', 3, AF9)>,  /* SDMMC2_D2 */
+					 <STM32_PINMUX('B', 4, AF9)>,  /* SDMMC2_D3 */
+					 <STM32_PINMUX('A', 8, AF9)>,  /* SDMMC2_D4 */
+					 <STM32_PINMUX('A', 15, AF9)>, /* SDMMC2_D5 */
+					 <STM32_PINMUX('E', 5, AF9)>,  /* SDMMC2_D6 */
+					 <STM32_PINMUX('C', 7, AF10)>; /* SDMMC2_D7 */
 			bias-pull-up;
 			drive-push-pull;
 			slew-rate = <1>;
 		};
 		pins2 {
-			pinmux = <STM32_PINMUX('E', 3, AF9)>; /* SDMMC2_CK */
+			pinmux = <STM32_PINMUX('E', 3, AF9)>;  /* SDMMC2_CK */
 			bias-pull-up;
 			drive-push-pull;
 			slew-rate = <3>;
@@ -287,14 +291,12 @@
 	/* USER CODE END rtc */
 };
 
+/*
 &sdmmc1{
 	pinctrl-names = "default";
 	pinctrl-0 = <&sdmmc1_pins_mx>;
 	status = "okay";
-
-	/* USER CODE BEGIN sdmmc1 */
-	/* USER CODE END sdmmc1 */
-};
+};*/
 
 &sdmmc2{
 	pinctrl-names = "default";
