--- a/mx/stm32mp157a-hdmi-lt8912b-emmc-mx/u-boot/stm32mp157a-hdmi-lt8912b-emmc-mx.dts
+++ b/mx/stm32mp157a-hdmi-lt8912b-emmc-mx/u-boot/stm32mp157a-hdmi-lt8912b-emmc-mx.dts
@@ -68,7 +68,7 @@
 		compatible = "hdmi-connector";
 		type = "a";
 		ddc-i2c-bus = <&i2c4>;
-		hpd-gpios = <&gpiod 15 GPIO_ACTIVE_HIGH>;
+		hpd-gpios = <&gpioa 11 GPIO_ACTIVE_HIGH>;
 
 		port {
 			hdmi_connector_in: endpoint {
@@ -77,6 +77,7 @@
 		};
 	};
 
+	/*
 	led {
 		compatible = "gpio-leds";
 		led1 {
@@ -99,7 +100,7 @@
 			pwms = <&{/soc/timer@44000000/pwm} 3 500000 0>;
 			max-brightness = <127>;
 		};
-	};
+	};*/
 
 	usb_phy_tuning: usb-phy-tuning {
 		st,hs-dc-level = <2>;
@@ -132,10 +133,11 @@
 		regulator-initial-mode = <0>;
 	};
 
+	/*
 	wifi_pwrseq: wifi-pwrseq {
 		compatible = "mmc-pwrseq-simple";
 		reset-gpios = <&gpiof 9 GPIO_ACTIVE_LOW>;
-	};
+	};*/
 
 	/* USER CODE END root */
 
@@ -285,17 +287,21 @@
 
 	sdmmc2_pins_mx: sdmmc2_mx-0 {
 		pins1 {
-			pinmux = <STM32_PINMUX('B', 3, AF9)>, /* SDMMC2_D2 */
-					 <STM32_PINMUX('B', 4, AF9)>, /* SDMMC2_D3 */
+			pinmux = <STM32_PINMUX('G', 6, AF10)>; /* SDMMC2_CMD */
 					 <STM32_PINMUX('B', 14, AF9)>, /* SDMMC2_D0 */
 					 <STM32_PINMUX('B', 15, AF9)>, /* SDMMC2_D1 */
-					 <STM32_PINMUX('G', 6, AF10)>; /* SDMMC2_CMD */
+					 <STM32_PINMUX('B', 3, AF9)>,  /* SDMMC2_D2 */
+					 <STM32_PINMUX('B', 4, AF9)>,  /* SDMMC2_D3 */
+					 <STM32_PINMUX('A', 8, AF9)>,  /* SDMMC2_D4 */
+					 <STM32_PINMUX('A', 15, AF9)>, /* SDMMC2_D5 */
+					 <STM32_PINMUX('E', 5, AF9)>,  /* SDMMC2_D6 */
+					 <STM32_PINMUX('C', 7, AF10)>; /* SDMMC2_D7 */
 			bias-pull-up;
 			drive-push-pull;
 			slew-rate = <1>;
 		};
 		pins2 {
-			pinmux = <STM32_PINMUX('E', 3, AF9)>; /* SDMMC2_CK */
+			pinmux = <STM32_PINMUX('E', 3, AF9)>;  /* SDMMC2_CK */
 			bias-pull-up;
 			drive-push-pull;
 			slew-rate = <3>;
@@ -304,16 +310,20 @@
 
 	sdmmc2_opendrain_pins_mx: sdmmc2_opendrain_mx-0 {
 		pins1 {
-			pinmux = <STM32_PINMUX('B', 3, AF9)>, /* SDMMC2_D2 */
-					 <STM32_PINMUX('B', 4, AF9)>, /* SDMMC2_D3 */
-					 <STM32_PINMUX('B', 14, AF9)>, /* SDMMC2_D0 */
-					 <STM32_PINMUX('B', 15, AF9)>; /* SDMMC2_D1 */
+			pinmux = <STM32_PINMUX('B', 14, AF9)>, /* SDMMC2_D0 */
+					 <STM32_PINMUX('B', 15, AF9)>, /* SDMMC2_D1 */
+					 <STM32_PINMUX('B', 3, AF9)>,  /* SDMMC2_D2 */
+					 <STM32_PINMUX('B', 4, AF9)>,  /* SDMMC2_D3 */
+					 <STM32_PINMUX('A', 8, AF9)>,  /* SDMMC2_D4 */
+					 <STM32_PINMUX('A', 15, AF9)>, /* SDMMC2_D5 */
+					 <STM32_PINMUX('E', 5, AF9)>,  /* SDMMC2_D6 */
+					 <STM32_PINMUX('C', 7, AF10)>; /* SDMMC2_D7 */
 			bias-pull-up;
 			drive-push-pull;
 			slew-rate = <1>;
 		};
 		pins2 {
-			pinmux = <STM32_PINMUX('E', 3, AF9)>; /* SDMMC2_CK */
+			pinmux = <STM32_PINMUX('E', 3, AF9)>;  /* SDMMC2_CK */
 			bias-pull-up;
 			drive-push-pull;
 			slew-rate = <3>;
@@ -328,12 +338,16 @@
 
 	sdmmc2_sleep_pins_mx: sdmmc2_sleep_mx-0 {
 		pins {
-			pinmux = <STM32_PINMUX('B', 3, ANALOG)>, /* SDMMC2_D2 */
-					 <STM32_PINMUX('B', 4, ANALOG)>, /* SDMMC2_D3 */
-					 <STM32_PINMUX('B', 14, ANALOG)>, /* SDMMC2_D0 */
-					 <STM32_PINMUX('B', 15, ANALOG)>, /* SDMMC2_D1 */
-					 <STM32_PINMUX('E', 3, ANALOG)>, /* SDMMC2_CK */
-					 <STM32_PINMUX('G', 6, ANALOG)>; /* SDMMC2_CMD */
+			pinmux = <STM32_PINMUX('E', 3, AF9)>;  /* SDMMC2_CK */
+					 <STM32_PINMUX('G', 6, AF10)>; /* SDMMC2_CMD */
+					 <STM32_PINMUX('B', 14, AF9)>, /* SDMMC2_D0 */
+					 <STM32_PINMUX('B', 15, AF9)>, /* SDMMC2_D1 */
+					 <STM32_PINMUX('B', 3, AF9)>,  /* SDMMC2_D2 */
+					 <STM32_PINMUX('B', 4, AF9)>,  /* SDMMC2_D3 */
+					 <STM32_PINMUX('A', 8, AF9)>,  /* SDMMC2_D4 */
+					 <STM32_PINMUX('A', 15, AF9)>, /* SDMMC2_D5 */
+					 <STM32_PINMUX('E', 5, AF9)>,  /* SDMMC2_D6 */
+					 <STM32_PINMUX('C', 7, AF10)>; /* SDMMC2_D7 */
 		};
 	};
 
@@ -548,13 +562,12 @@
 	/* USER CODE END dsi */
 };
 
+/*
 &ethernet0{
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&eth1_pins_mx>;
 	pinctrl-1 = <&eth1_sleep_pins_mx>;
 	status = "okay";
-
-	/* USER CODE BEGIN ethernet0 */
 
 	phy-mode = "rmii";
 	max-speed = <100>;
@@ -581,9 +594,7 @@
 			clock-names = "rmii-ref";
 		};
 	};
-
-	/* USER CODE END ethernet0 */
-};
+};*/
 
 &gpu{
 	status = "okay";
@@ -610,8 +621,8 @@
 	mipi_dsi_hdmi: lt8912@48 {
 		compatible = "lontium,lt8912b";
 		reg = <0x48>;
-		reset-gpios = <&gpioa 1 GPIO_ACTIVE_LOW>;
-		swap-mipi-pn;
+		reset-gpios = <&gpioa 12 GPIO_ACTIVE_LOW>;
+		//swap-mipi-pn;
 		status = "okay";
 
 		ports {
@@ -690,14 +701,12 @@
 	/* USER CODE END rtc */
 };
 
-&sdmmc1{
+&sdmmc2{
 	pinctrl-names = "default", "opendrain", "sleep";
-	pinctrl-0 = <&sdmmc1_pins_mx>;
-	pinctrl-1 = <&sdmmc1_opendrain_pins_mx>;
-	pinctrl-2 = <&sdmmc1_sleep_pins_mx>;
+	pinctrl-0 = <&sdmmc2_pins_mx>;
+	pinctrl-1 = <&sdmmc2_opendrain_pins_mx>;
+	pinctrl-2 = <&sdmmc2_sleep_pins_mx>;
 	status = "okay";
-
-	/* USER CODE BEGIN sdmmc1 */
 
 	non-removable;
 	no-sd;
@@ -708,9 +717,9 @@
 	vqmmc-supply = <&vdd>;
 	mmc-ddr-3_3v;
 
-	/* USER CODE END sdmmc1 */
 };
 
+/*
 &sdmmc2{
 	pinctrl-names = "default", "opendrain", "sleep";
 	pinctrl-0 = <&sdmmc2_pins_mx>;
@@ -718,24 +727,19 @@
 	pinctrl-2 = <&sdmmc2_sleep_pins_mx>;
 	status = "okay";
 
-	/* USER CODE BEGIN sdmmc2 */
-
 	broken-cd;
 	st,neg-edge;
 	bus-width = <4>;
 	vmmc-supply = <&vdd>;
+};*/
 
-	/* USER CODE END sdmmc2 */
-};
-
+/*
 &sdmmc3{
 	pinctrl-names = "default", "opendrain", "sleep";
 	pinctrl-0 = <&sdmmc3_pins_mx>;
 	pinctrl-1 = <&sdmmc3_opendrain_pins_mx>;
 	pinctrl-2 = <&sdmmc3_sleep_pins_mx>;
 	status = "okay";
-
-	/* USER CODE BEGIN sdmmc3 */
 
 	arm,primecell-periphid = <0x10153180>;
 	non-removable;
@@ -751,9 +755,7 @@
 		reg = <1>;
 		compatible = "brcm,bcm4329-fmac";
 	};
-
-	/* USER CODE END sdmmc3 */
-};
+};*/
 
 &tamp{
 	status = "okay";
@@ -797,13 +799,12 @@
 	/* USER CODE END uart4 */
 };
 
+/*
 &uart7{
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&uart7_pins_mx>;
 	pinctrl-1 = <&uart7_sleep_pins_mx>;
 	status = "okay";
-
-	/* USER CODE BEGIN uart7 */
 
 	u-boot,dm-pre-reloc;
 	uart-has-rtscts;
@@ -813,9 +814,7 @@
 		compatible = "brcm,bcm43438-bt";
 		max-speed = <3000000>;
 	};
-
-	/* USER CODE END uart7 */
-};
+};*/
 
 &usbh_ehci{
 	status = "okay";
