--- a/mx/stm32mp157a-hdmi-lt8912b-emmc-mx/kernel/stm32mp157a-hdmi-lt8912b-emmc-mx.dts
+++ b/mx/stm32mp157a-hdmi-lt8912b-emmc-mx/kernel/stm32mp157a-hdmi-lt8912b-emmc-mx.dts
@@ -285,10 +285,10 @@
 		};
 	};
 
-	/////////////////
+
 	sdmmc2_pins_mx: sdmmc2_mx-0 {
 		pins1 {
-			pinmux = <STM32_PINMUX('G', 6, AF10)>; /* SDMMC2_CMD */
+			pinmux = <STM32_PINMUX('G', 6, AF10)>, /* SDMMC2_CMD */
 					 <STM32_PINMUX('B', 14, AF9)>, /* SDMMC2_D0 */
 					 <STM32_PINMUX('B', 15, AF9)>, /* SDMMC2_D1 */
 					 <STM32_PINMUX('B', 3, AF9)>,  /* SDMMC2_D2 */
@@ -339,8 +339,8 @@
 
 	sdmmc2_sleep_pins_mx: sdmmc2_sleep_mx-0 {
 		pins {
-			pinmux = <STM32_PINMUX('E', 3, AF9)>;  /* SDMMC2_CK */
-					 <STM32_PINMUX('G', 6, AF10)>; /* SDMMC2_CMD */
+			pinmux = <STM32_PINMUX('E', 3, AF9)>,  /* SDMMC2_CK */
+					 <STM32_PINMUX('G', 6, AF10)>, /* SDMMC2_CMD */
 					 <STM32_PINMUX('B', 14, AF9)>, /* SDMMC2_D0 */
 					 <STM32_PINMUX('B', 15, AF9)>, /* SDMMC2_D1 */
 					 <STM32_PINMUX('B', 3, AF9)>,  /* SDMMC2_D2 */
@@ -351,7 +351,6 @@
 					 <STM32_PINMUX('C', 7, AF10)>; /* SDMMC2_D7 */
 		};
 	};
-	/////////////////
 
 	sdmmc3_pins_mx: sdmmc3_mx-0 {
 		pins1 {
