--- a/mx/stm32mp157a-hdmi-lt8912b-emmc-mx/tf-a/stm32mp15-mx.dtsi
+++ b/mx/stm32mp157a-hdmi-lt8912b-emmc-mx/tf-a/stm32mp15-mx.dtsi
@@ -1,8 +1,6 @@
+// SPDX-License-Identifier: GPL-2.0+ OR BSD-3-Clause
 /*
- * Copyright (C) 2015-2018, STMicroelectronics - All Rights Reserved
- *
- * SPDX-License-Identifier:	GPL-2.0+	BSD-3-Clause
- *
+ * Copyright (C) 2018, STMicroelectronics - All Rights Reserved
  */
 
 /*
@@ -10,13 +8,13 @@
  * DDR type: DDR3 / DDR3L
  * DDR width: 16bits
  * DDR density: 4Gb
- * System frequency: 533000kHz
+ * System frequency: 533000Khz
  * Relaxed Timing Mode: false
  * Address mapping type: RBC
  *
- * Save Date: 2022.12.21, save Time: 14:01:28
+ * Save Date: 2020.02.20, save Time: 18:45:20
  */
-
+#define DDR_MEM_COMPATIBLE ddr3-1066-888-bin-g-1x4gb-533mhz
 #define DDR_MEM_NAME	"DDR3-DDR3L 16bits 533000kHz"
 #define DDR_MEM_SPEED	533000
 #define DDR_MEM_SIZE	0x20000000
@@ -33,7 +31,7 @@
 #define DDR_RFSHCTL3 0x00000000
 #define DDR_RFSHTMG 0x0081008B
 #define DDR_CRCPARCTL0 0x00000000
-#define DDR_DRAMTMG0 0x0F101B0F
+#define DDR_DRAMTMG0 0x121B2414
 #define DDR_DRAMTMG1 0x000A041C
 #define DDR_DRAMTMG2 0x0608090F
 #define DDR_DRAMTMG3 0x0050400C
@@ -102,6 +100,20 @@
 #define DDR_ODTCR 0x00010000
 #define DDR_ZQ0CR1 0x00000038
 #define DDR_DX0GCR 0x0000CE81
+#define DDR_DX0DLLCR 0x40000000
+#define DDR_DX0DQTR 0xFFFFFFFF
+#define DDR_DX0DQSTR 0x3DB02000
 #define DDR_DX1GCR 0x0000CE81
+#define DDR_DX1DLLCR 0x40000000
+#define DDR_DX1DQTR 0xFFFFFFFF
+#define DDR_DX1DQSTR 0x3DB02000
 #define DDR_DX2GCR 0x0000CE80
+#define DDR_DX2DLLCR 0x40000000
+#define DDR_DX2DQTR 0xFFFFFFFF
+#define DDR_DX2DQSTR 0x3DB02000
 #define DDR_DX3GCR 0x0000CE80
+#define DDR_DX3DLLCR 0x40000000
+#define DDR_DX3DQTR 0xFFFFFFFF
+#define DDR_DX3DQSTR 0x3DB02000
+
+//#include "stm32mp15-ddr.dtsi"
